--- a/graduation-form/public/index.html
+++ b/graduation-form/public/index.html
@@ -28,17 +28,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id='graduation-form-7' class='op-widget uninitialized-op-widget' data-graphql-url='https://jeffrey.op.ac.nz/api'  data-journal-id='1'></div>
-    <!-- <div id="graduation-form"></div> -->
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id='graduation-form-14' class='op-widget uninitialized-op-widget' data-graphql-url='https://jeffrey.op.ac.nz/api' data-widget-id='14' data-token-url='https://jeffrey.op.ac.nz/token?ignore-saml-redirect=1'></div>
   </body>
 </html>
